traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if (estFaceMur() && getDirection() == Direction.EST) {
    ^Snake:10: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if (estFaceMur() && getDirection() == Direction.OUEST){
    ^